--- a/assets/styles/01_settings/_mixins.css
+++ b/assets/styles/01_settings/_mixins.css
@@ -32,6 +32,9 @@
 =============================================*/
 
 
+/* Mobile and small screens (up to 768px) */
+
+
 /* Tablet */
 @media screen and (min-width: 530px) {
     :root {
@@ -43,12 +46,20 @@
 /* Tablet */
 @media screen and (min-width: 640px) {
     :root {
-        font-size: 12px;
+        font-size: 11px;
     }
 }
 
 /* Tablet */
 @media screen and (min-width: 768px) {
+    :root {
+        font-size: 11px;
+    }
+
+}
+
+/* Tablet */
+@media screen and (min-width: 860px) {
     :root {
         font-size: 12px;
     }
@@ -58,18 +69,16 @@
 /* Desktop */
 @media screen and (min-width: 1024px) {
     :root {
-        font-size: 15px;
+        font-size: 13px;
     }
 }
 
 /* Large Desktop */
 @media screen and (min-width: 1440px) {
     :root {
-        font-size: 16px;
+        font-size: 13px;
     }
 }
-
-
 /* Container max-widths */
 @media (--sm-and-up) {
   .container {
