--- a/assets/styles/02_components/_forms.css
+++ b/assets/styles/02_components/_forms.css
@@ -28,13 +28,12 @@
 .filter-label {
     font-size: var(--font-size-sm);
     color: var(--color-text-default);
-    font-weight: var(--font-weight-semibold);
+    font-weight: 500 !important;
     display: flex;
     border: 0;
     align-items: center;
     margin: 0;
     padding: 0 !important;
-    min-height: 1.9rem !important;
     
 }
 
