--- a/assets/styles/01_settings/_tokens.css
+++ b/assets/styles/01_settings/_tokens.css
@@ -35,6 +35,8 @@
     --font-size-base: 1rem;
     --font-size-md: 1.125rem;
     --font-size-sm: 0.875rem;
+    --font-size-dd: 0.85rem;
+    --font-size-fl: 0.85rem;
     --font-size-xs: 0.800rem;
     --font-size-xxs: 0.6rem;
 
