--- a/assets/styles/components/_layout.css
+++ b/assets/styles/components/_layout.css
@@ -1,3 +1,8 @@
+.row>* {
+
+}
+
+
 .container-fluid {
     min-width: 100%;
     padding-right: 0px;
@@ -17,44 +22,15 @@
     background-color: #white !important;
 }
 
-.layout-wrapper card-body {
-    background-color: #white !important;
-}
-
-.card-body {
-    width: 100%;
-}
-
-.data-section {
-    margin-top: o !important;
-    margin-bottom: 2rem;  /* Alternative/additional spacing method */
-    width: fit-content;
-}
-
-.datatable-container {
-    width: fit-content;
-    margin-top: 1rem !important;
-    max-width: none;
-    border: 1px solid #ccc;
-    height: calc(100% - var(--titles-height));
-    overflow: auto;
-    font-family: var(--font-family-sans);
-    font-size: var(--table-font-size);
-    overflow-x: hidden;
-    margin-left: 0px;
-    border: 0;
-}
-
-.fltr-row mb-5 row {
-    margin-bottom: 2rem !important;  
-}
-
-.tables-container {
-    margin-top: 2rem !important;  
+.filter-panel {
+    min-width: 375px;
+    background-color: #f5f5f5;
+    border-bottom: 2px solid #808080;
+    margin-bottom: 0.5rem;
 }
 
 /* Sidebar styles */
-.sidebar-col {
+.sidebar {
     width: 100%;
     max-width: 100%;
     border: 0; 
@@ -64,26 +40,22 @@
     margin: 0 !important;
     position: relative;
     overflow: visible;
+    transition: width 0.3s ease;
 }
 
-.d-flex.justify-content-start {
-    overflow: hidden;
+.sidebar.collapsed {
+    width: 100%;
+    max-width: 100%;
+    height: 0;
+    position: absolute;
+    padding: 0;
+    margin: 0;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    transition: width 0.3s ease;
 }
 
-.row {
-    margin-left: 0 !important;
-    margin-right: 0 !important;
-}
-
-.row>* {
-    padding: 0 !important;
-}
-
-.Select-value-label {
-    margin-left: 2px !important;
-}
-
-.fltr-row {
+.filter-row {
     max-width: 430px;
     min-width: 375px;
     min-height: 2.5rem;
@@ -97,24 +69,15 @@
     border-collapse: collapse !important;
 }
 
-.filter-panel {
-    min-width: 375px;
-    background-color: #f5f5f5;
-    border-bottom: 2px solid #808080;
-    margin-bottom: 0.5rem;  /* Alternative/additional spacing method */
-}
-
-.sidebar-col.collapsed {
-    width: 100%;
-    max-width: 100%;
-    height: 0;
-    position: absolute;
-    padding: 0;
-    margin: 0;
-    clip: rect(0, 0, 0, 0);
-    white-space: nowrap;
-}
-
-.card-container {
-    margin-bottom: 1rem;
+/* Filter Styles */
+.filter-label {
+    font-size: var(--font-size-fl);
+    color: var(--color-text-default);
+    font-weight: 500 !important;
+    display: flex;
+    border: 0;
+    height: 100%;
+    align-items: center;
+    margin: 0 !important;
+    padding: 0 !important;
 }
