--- a/assets/styles/components/_data-table.css
+++ b/assets/styles/components/_data-table.css
@@ -11,14 +11,35 @@
 .data-section:last-child {
     margin-bottom: 0;
 }
-
 .table-title {
-    font-size: var(--font-size-md);
+    font-size: 0.875rem;
+    white-space: pre-line;
 }
 
-.table-subtitle {
-    font-size: var(--font-size-base);
+
+.table-title-first-row {
+    font-size: 0.875rem;
+    white-space: pre-line;
 }
+
+.table-title-second-row {
+    font-size: 0.875rem;
+    white-space: pre-line;
+}
+
+
+.sidebar.collapsed {
+    width: 100%;
+    max-width: 100%;
+    height: 0;
+    position: absolute;
+    padding: 0;
+    margin: 0;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    transition: width 0.3s ease;
+}
+
 
 .dash-table-container {
 }
